Bug 72304 - FILESAVE: DOCX: Chart data table is lost after export
Summary: FILESAVE: DOCX: Chart data table is lost after export
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Nikhil Walvekar
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-04 10:58 UTC by Nikhil Walvekar
Modified: 2014-01-03 12:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Original file which has data table (17.66 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-12-04 10:58 UTC, Nikhil Walvekar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nikhil Walvekar 2013-12-04 10:58:53 UTC
Created attachment 90216 [details]
Original file which has data table

For a chart we can add data table with chart image. When open and save file with LibreOffice, that data table is lost.
Comment 1 Jorendc 2013-12-06 17:22:41 UTC
I can reproduce this behavior, tested using Mac OSX 10.9 with LibreOffice Version: 4.2.0.0.beta2 Build ID: 1a27be92e320f97c20d581a69ef1c8b99ea9885d
Opened the file using Word for Mac 2011.

Kind regards,
Joren
Comment 2 Commit Notification 2013-12-19 02:56:01 UTC
Nikhil Walvekar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=20bb1e6854c42df50536238414d93993ad764999

fdo#72304 Preserve Chart data table properties during ODF import/export.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2013-12-19 02:56:17 UTC
Nikhil Walvekar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ba76bf5c7b705d3f5e8d807346a34d9da34127d3

fdo#72304 Added properties to store Chart data table information, during import.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-12-19 02:56:31 UTC
Nikhil Walvekar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cf5c3e97b66ef31f2b8db4dca4c8eb179754e694

fdo#72304 Write Chart Data Table information back to XML.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Alexandr 2013-12-27 13:56:38 UTC
*** Bug 72520 has been marked as a duplicate of this bug. ***