fdo#72304 Added properties to store Chart data table information, during import.

Change-Id: I77c458828b86bc31fae533e2e632d57237e44e6f